dada_tests/parser/float_no_decimal/ref.ref
Error: expected digits after `.`
   ╭─[dada_tests/parser/float_no_decimal.dada:2:10]
   │
 2 │     a = 1.
   ·          ┬  
   ·          ╰── here
───╯
